# assemblyStatistics

./: .gitignore  FastaUtils.py  README.md  assemblyStatics.py  assemblyStatistics.py  pyproject.toml  pyproject.toml   setup.py  test.fasta
src/: FastaUtils.py  __init__.py  assemblyStatistics.py
tests/: sample.fasta  test_module.py
