[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assemblyStatistics"
version = "1.1.3"
authors = [
  { name="Wenchao Lin", email="linwenchao@yeah.net" },
]
description = "A script to evaluate the assembly of a given genome."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
keywords = ["assembly", "scaffolds"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[project.scripts]
assemblyStatistics = "src.assemblyStatistics:main"

[project.urls]
"Homepage" = "https://github.com/WenchaoLin/assemblyStatistics"
"Bug Tracker" = "https://github.com/WenchaoLin/assemblyStatistics/issues"